# casper_engine

./: .gitignore  .gitmodules  README.md  STRUCTURE.md  casper_engine  casper_engine.cpp  test_generation.c  tokenizer.c
Core_CPP/: bench_niyah.c  build_gcc.sh  casper_core.cpp  casper_ffi.c  constraint_solver.c  constraint_solver.h  hybrid_reasoner.c  hybrid_reasoner.h  khz_q_svd.c  matrix.cpp  niyah_core.c  niyah_core.h  niyah_hybrid_main.c  niyah_main.c  niyah_train.c  proof_generator.c  proof_generator.h  rule_parser.c  rule_parser.h  trainer  trainer.cpp  trainer_real.cpp  trainer_real_fix.cpp
Math_ASM/: avx_mult.asm
UI_CSharp/: Casper.csproj  CasperManager.cs  MainWindow.xaml.cs
casper_configs/rules/: algebra_logic.nrule  math_logic.nrule
include/: casper_ffi.h  win_time.h
kspike/: .gitignore  Cargo.toml  LICENSE  README.md  ROADMAP.md  build.rs
kspike/.github/: dependabot.yml
kspike/.github/workflows/: ci.yml  ebpf.yml
kspike/crates/kspike-auth-log/: Cargo.toml
kspike/crates/kspike-auth-log/src/: lib.rs
kspike/crates/kspike-casper-ffi/: Cargo.toml
kspike/crates/kspike-casper-ffi/include/: casper_ffi.h
kspike/crates/kspike-casper-ffi/src/: ffi.rs  judge.rs  lib.rs
kspike/crates/kspike-casper-ffi/stub/: Makefile  libcasper_stub.c
kspike/crates/kspike-cli/: Cargo.toml
kspike/crates/kspike-cli/examples/: test_casper_e2e.rs  test_v1_full.rs  test_v6_taps.rs
kspike/crates/kspike-cli/src/: main.rs
kspike/crates/kspike-core/: Cargo.toml
kspike/crates/kspike-core/src/: error.rs  event.rs  evidence.rs  humility.rs  lib.rs  module.rs  prelude.rs  signal.rs
kspike/crates/kspike-daemon/: Cargo.toml  server.rs
kspike/crates/kspike-daemon/src/: build.rs  client.rs  lib.rs  main.rs  server.rs  wire.rs
kspike/crates/kspike-ebpf-lsm/: Cargo.toml
kspike/crates/kspike-ebpf-lsm/bpf/: Cargo.toml
kspike/crates/kspike-ebpf-lsm/bpf/src/: main.rs
kspike/crates/kspike-ebpf-lsm/src/: event.rs  lib.rs  tap.rs
kspike/crates/kspike-haven/: Cargo.toml
kspike/crates/kspike-haven/src/: boot.rs  lib.rs  manifest.rs  phalanx.rs
kspike/crates/kspike-honeypot/: Cargo.toml
kspike/crates/kspike-honeypot/src/: builtins.rs  lib.rs  profile.rs  responder.rs
kspike/crates/kspike-judge/: Cargo.toml
kspike/crates/kspike-judge/src/: judge.rs  lib.rs  roe.rs
kspike/crates/kspike-kernel/: Cargo.toml
kspike/crates/kspike-kernel/src/: canary.rs  inspect.rs  lib.rs  packet.rs  tap.rs  xdp_event.rs
kspike/crates/kspike-kforge/: Cargo.toml
kspike/crates/kspike-kforge/src/: backpressure.rs  discovery.rs  frame.rs  keylog.rs  lib.rs  merge.rs  peer.rs
kspike/crates/kspike-khz/: Cargo.toml
kspike/crates/kspike-khz/src/: balancer.rs  fitrah.rs  lib.rs  operator.rs  protocol.rs
kspike/crates/kspike-modules/: Cargo.toml
kspike/crates/kspike-modules/src/: defenders.rs  detectors.rs  engine.rs  lib.rs  strikers.rs
kspike/crates/kspike-modules/src/msf_mirror/: canary_token.rs  cred_canary.rs  eternalblue.rs  kerberoast.rs  log4shell.rs  meterpreter.rs  mod.rs  psexec.rs  shikata.rs
kspike/crates/kspike-niyah/: Cargo.toml
kspike/crates/kspike-niyah/src/: explainer.rs  ledger_view.rs  lib.rs  templates.rs
kspike/crates/kspike-procfs/: Cargo.toml
kspike/crates/kspike-procfs/src/: lib.rs  modules.rs  parse.rs  tcp.rs
kspike/crates/kspike-tui/: Cargo.toml
kspike/crates/kspike-tui/src/: main.rs
kspike/crates/kspike-windows/: Cargo.toml
kspike/crates/kspike-windows/src/: etw.rs  ingest.rs  lib.rs  wfp.rs
kspike/crates/kspike-xdp-burp/: Cargo.toml
kspike/crates/kspike-xdp-burp/bpf/: Cargo.toml  rust-toolchain.toml
kspike/crates/kspike-xdp-burp/bpf/src/: main.rs
kspike/crates/kspike-xdp-burp/src/: lib.rs  main.rs  replay.rs  runtime.rs  sinkhole.rs  tap.rs
kspike/docs/architecture/: judge_pipeline.md
kspike/docs/design/: ARCHITECTURE.md  XDP-BURP.md
kspike/docs/khz/: khz_protocols.ndjson
kspike/docs/ops/: BUILDING-BPF.md
kspike/docs/roe/: ROE-CHARTER.md
kspike/examples/: roe.toml  sample_signal.json
kspike/lib/: casper.lib
kspike/src/: casper_ffi.rs
scripts/: build_corpus.ps1  build_gcc.sh  build_library_msvc.ps1  build_msvc.ps1  build_trainer.ps1  niyah.ps1  run_trainer.ps1
