[package]
name        = "kspike-core"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
authors.workspace     = true
license.workspace     = true
description = "KSpike core: module trait, event bus, evidence ledger"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
ed25519-dalek = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
