[package]
name        = "kspike-ebpf-lsm"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike eBPF LSM hooks — file_open, bprm_check_security, capable; user-space loader"

[dependencies]
kspike-core   = { path = "../kspike-core" }
kspike-kernel = { path = "../kspike-kernel" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }

[features]
default = []
aya_runtime = []
