[package]
name        = "kspike-judge"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike Judge: Casper-backed Rules of Engagement evaluator"

[dependencies]
kspike-core = { path = "../kspike-core" }
kspike-khz  = { path = "../kspike-khz" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }
