[package]
name        = "kspike-kforge"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "K-Forge gossip: P2P replication of KSpike evidence ledgers across community nodes"

[dependencies]
kspike-core = { path = "../kspike-core" }
serde       = { workspace = true }
serde_json  = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
blake3      = { workspace = true }
ed25519-dalek = { workspace = true }
chrono      = { workspace = true }

[dependencies.tokio]
version  = "1"
features = ["rt-multi-thread", "macros", "net", "io-util", "time", "sync"]
