[package]
name        = "kspike-modules"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike module library: defenders, strikers, detectors, deceptions"

[dependencies]
kspike-core   = { path = "../kspike-core" }
kspike-kernel = { path = "../kspike-kernel" }
kspike-judge  = { path = "../kspike-judge" }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

[features]
default    = ["defenders", "detectors", "msf_mirror"]
defenders  = []
detectors  = []
strikers   = []   # locked behind judge; must be explicitly enabled
msf_mirror = []   # MS17-010, PSExec, Log4Shell, Meterpreter, Kerberoast, ...
all        = ["defenders", "detectors", "strikers", "msf_mirror"]
