[package]
name        = "kspike-niyah"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "Arabic-first NLP enrichment for KSpike — Niyah Engine glue, Arabic ROE explanations, RTL-safe ledger annotations"

[dependencies]
kspike-core      = { path = "../kspike-core" }
kspike-judge     = { path = "../kspike-judge" }
kspike-casper-ffi = { path = "../kspike-casper-ffi" }

serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
