[package]
name        = "kspike-procfs"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike procfs/sysfs taps — /proc/net/tcp{,6}, /proc/modules, /sys/module/* integrity"

[dependencies]
kspike-core   = { path = "../kspike-core" }
kspike-kernel = { path = "../kspike-kernel" }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
