[package]
name        = "kspike-windows"
version.workspace     = true
edition.workspace     = true
rust-version.workspace = true
license.workspace     = true
description = "KSpike Windows-side bridge: WFP-mirror + ETW provider scaffold (cross-compiles cleanly on any host)"

[dependencies]
kspike-core   = { path = "../kspike-core" }
kspike-kernel = { path = "../kspike-kernel" }

serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
thiserror  = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }

[features]
default = []
# Real WFP/ETW linkage. On non-Windows hosts the scaffolding compiles to a stub.
wfp_runtime = []
etw_runtime = []
