[package]
name        = "kspike-xdp-burp-ebpf"
version     = "0.1.0"
edition     = "2021"
license     = "Casper-Sovereign-1.0"
description = "eBPF program loaded by kspike-xdp-burp (XDP, RingBuf + PerfEventArray)"
publish     = false

[[bin]]
name = "kspike-xdp-burp-ebpf"
path = "src/main.rs"

# This crate is compiled with the `bpfel-unknown-none` or `bpfeb-unknown-none`
# target, not the host target. See docs/design/XDP-BURP.md for the recipe:
#
#   cargo build --release \
#       --target bpfel-unknown-none \
#       -Z build-std=core \
#       --package kspike-xdp-burp-ebpf
#
# The resulting .o is then loaded by the user-space crate.

[dependencies]
aya-ebpf      = { version = "0.1", default-features = false }
aya-log-ebpf  = { version = "0.1", default-features = false }
network-types = { version = "0.0.8", default-features = false }

[profile.dev]
opt-level  = 3
debug      = false
debug-assertions = false
overflow-checks  = false
lto        = true
panic      = "abort"
incremental = false
codegen-units = 1
rpath      = false

[profile.release]
lto        = true
panic      = "abort"
codegen-units = 1
